package model.interfaces;

// ydeng24@depaul.edu

public interface ICommand {
    void execute();
}
