package model.interfaces;

// ydeng24@depaul.edu

public interface IUndoable {
    void undo();
    void redo();
}
